--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,4 +1,11 @@
 
+.open-sans-normal {
+  font-family: "Open Sans", serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
 
 nav{
     display: flex;
