added font color and size

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,15 @@
     "wdth" 100;
 }
 
+.text-primary{
+    color: #FD6E0A;
+}
+
 nav{
     display: flex;
+}
+
+.nav-title{
+    font-weight: 800;
+    font-size: 45px;
 }
