--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,12 +12,26 @@
     color: #FD6E0A;
 }
 
+.dark-2 {
+    color:#474747;
+}
+
 nav{
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content: space-between;   
+    margin: 0 200px;
 }
 
+.btn-primary{
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 20px;
+    background-color: #FD6E0A;
+    border-radius: 5px;
+    padding: 18px 35px;
+   
+}
 
 .nav-title{
     font-weight: 800;
@@ -26,11 +40,13 @@ nav{
 
 nav ul {
     display: flex;
+    align-items: center;
 }
 
 nav ul li {
     list-style: none;
     margin-right: 46px;
+    font
     
 }
 
