--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -30,6 +30,7 @@ nav{
     background-color: #FD6E0A;
     border-radius: 5px;
     padding: 18px 35px;
+    border: none;
    
 }
 
@@ -46,7 +47,7 @@ nav ul {
 nav ul li {
     list-style: none;
     margin-right: 46px;
-    font
+    
     
 }
 
