--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,3 +54,37 @@ nav ul li {
 nav li a {
     text-decoration: none;
 }
+
+/* Banner styles */
+
+
+.banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 200px;
+
+}
+
+.banner-content{
+    max-width: 585px;
+
+}
+
+.banner-greetings{
+    font-weight: 600;
+    font-size: 45px;
+}
+
+.banner-title{
+    font-weight: bold;   
+    font-size: 85px;
+    color: #181818;
+}
+
+.content-description{ 
+    font-size: 18px;
+}
+
+.dark-3{
+    color: #757575;
+}
