--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -20,13 +20,17 @@
   background-color: #fff8f3;
 }
 
-.text-primary {
-  color: #fd6e0a;
+.dark-1{
+  color: #181818;
 }
 
 .dark-2 {
   color: #474747;
 }
+
+.dark-3 {
+  color: #757575;
+} 
 
 nav {
   display: flex;
@@ -64,6 +68,14 @@ nav li a {
   text-decoration: none;
 }
 
+.text-center{
+  text-align: center;
+}
+
+.text-primary {
+  color: #fd6e0a;
+}
+
 /* Banner styles */
 
 .banner {
@@ -95,16 +107,21 @@ nav li a {
   font-size: 18px;
 }
 
-.dark-3 {
-  color: #757575;
-}
-
 /* main styles */
 
 main {
   max-width: 1140px;
-  margin: 130px auto;
+  margin: 0px auto;
 }
+
+main section{
+
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+
+/* first section */   
+
 
 /* About styles */
 .About {
@@ -133,3 +150,38 @@ main {
 
     font-weight: bold;
 }
+
+/* second section- what i do */
+
+/* skills section styles */
+
+.skills-container{
+
+  display: flex;
+  gap: 24px;
+}
+
+.skills{
+  padding: 30px;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+  border-radius: 5px;
+}
+
+.skill-description{
+  font-weight: normal;
+  font-size: 18px;
+  margin: 30px 115px 50px;
+}
+
+.skills-description{
+
+  font-weight: normal;
+  font-size: 16px;
+  color: #757575;
+}
+
+.skill-title{
+  font-weight: bold;
+  font-size: 35px;
+}
+
