--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,13 +5,13 @@
   font-variation-settings: "wdth" 100;
 }
 
-/* header */
 
-.header {
-  background-image: url("../images/developer.png"),
-    url("../images/header_bg.png");
+/* header styles */
+
+.header{
+  background-image: url('../images/developer.png'), url('../images/header_bg.png');
   background-repeat: no-repeat;
-  background-position: top left, bottom right;
+  background-position: center left, bottom right;
 }
 
 /* shared style */
@@ -34,7 +34,7 @@
 
 nav {
   display: flex;
-  align-items: center;
+  align-items:center;
   justify-content: space-between;
   margin: 0 200px;
 }
@@ -78,7 +78,13 @@ nav li a {
 
 /* Banner styles */
 
-.banner-content {
+.banner{
+  display: flex;
+  justify-content: space-between;
+  margin: 0 38px 0 200px;
+}
+
+.banner-content{
   max-width: 585px;
 }
 
@@ -99,6 +105,10 @@ nav li a {
 
 .content-description {
   font-size: 18px;
+}
+
+.banner-profile-pic{
+  width: 580px;
 }
 
 /* main styles */
@@ -189,6 +199,7 @@ main section{
   text-decoration: underline;
   font-weight: bold;
   font-size: 35px;
+  text-align: center;
 }
 
 .resume-container{
@@ -225,12 +236,4 @@ main section{
 
 .resume hr{
   margin: 30px 0px;
-}
-
-/* resume section button */
-
-.resume-download-cv{
-
-  margin-top: 50px;
-  
 }
