--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -206,7 +206,6 @@ main section{
   display: flex;
   gap: 30px;
 }
-
 .resume-column-title{
   font-weight: bold;
   font-size: 30px;
@@ -236,4 +235,9 @@ main section{
 
 .resume hr{
   margin: 30px 0px;
+}
+
+.resume-download-btn{
+  text-align: center;
+  margin-top: 50px;
 }
