--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -242,4 +242,26 @@ main section{
   margin-top: 50px;
 }
 
+/* footer styles */
+
+footer{
+   display: flex;
+   gap: 115px;
+   padding: 130px 230px;
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea {
+  width: 460px;
+  height: 65px;
+  border-radius:5px;
+  margin-bottom: 24px;
+  background-color: white;
+  border:none;
+  padding: 10px 20px;
+}
+
+footer textarea{
+  height: 180px;
+  color: #757575;
+}
 
