--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -47,6 +47,8 @@ nav {
   border-radius: 5px;
   padding: 18px 35px;
   border: none;
+  width: 200px;
+  height: 65px;
 }
 
 .nav-title {
@@ -98,9 +100,17 @@ nav li a {
   font-size: 85px;
   color: #181818;
 }
-
 .banner-button {
-  border: #fd6e0a;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 5px;
+  color: #FD6E0A;
+  padding: 18px 23px 18px 58px;
+  margin-left: 30px;
+  border-color: rgba(253, 110, 10, 1);
+  border-style: ;
+  width: 160px;
+  height: 65px;
 }
 
 .content-description {
