--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -39,6 +39,10 @@ nav {
   margin: 0 200px;
 }
 
+.nav-port-blog{
+  font-weight: bold;
+  color: darkgreen;
+}
 .btn-primary {
   color: #ffffff;
   font-weight: bold;
