--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -342,3 +342,16 @@ textarea{
   padding: 18px 0 18px 30px;
   font-size: 18px;
 }
+
+
+/* Responsive website */
+
+.hide{
+  display: none;
+}
+
+@media screen and (max-width:576px){
+  .skills-container{
+    flex-direction: column;
+  }
+}
