--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -352,8 +352,35 @@ textarea{
 /* small devices */
 
 @media screen and (max-width:576px){
-  .skills-container{
+
+
+  .header{
+    background-image: none;
+  }
+
+  .banner{
+    flex-direction: column-reverse;
+    margin: 20px;
+  }
+
+  .banner-profile-pic {
+    width: 100%;
+    height: 100%;
+  }
+
+  .About{
+    padding: 30px 20px;
+  }
+
+  .skill-description{
+    margin: 30px 20px;
+  }
+  .skills-container, .About-items, nav, nav>ul{
     flex-direction: column;
+  }
+
+  nav>ul{
+    gap: 20px;
   }
 
   .resume-container{
@@ -362,11 +389,7 @@ textarea{
   }
 
   .resume-download-btn{
-    margin-left: 150px;
-  }
-
-  .About-items{
-   flex-direction: column;
+    margin-left: 100px;
   }
 
   footer{
