--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -353,7 +353,6 @@ textarea{
 
 @media screen and (max-width:576px){
 
-
   .header{
     background-image: none;
   }
@@ -403,5 +402,27 @@ textarea{
 
   form{
     width: calc(100% - 40px);
+  }
+}
+
+@media screen and (min-width:576px) and (max-width:990px){
+
+  .banner{
+    flex-direction: column-reverse;
+  }
+
+  nav{
+    margin-left: 40px;
+  }
+  nav>ul{
+    gap: auto;
+  }
+
+  .banner-profile-pic {
+    width: 100%;
+  }
+  .skills-container,.About-items{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
   }
 }
