--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -367,6 +367,10 @@ textarea{
     height: 100%;
   }
 
+  .header-btn{
+    margin-bottom: 20px;
+  }
+
   .About{
     padding: 30px 20px;
   }
@@ -420,9 +424,24 @@ textarea{
 
   .banner-profile-pic {
     width: 100%;
+    height: 100%;
   }
+
+  
+  .header-btn{
+    margin-bottom: 20px;
+  }
+  
   .skills-container,.About-items{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+  }
+
+  .resume-container {
+    margin: 20px;
+  }
+
+  .resume-download-btn{
+    margin-left: 350px;
   }
 }
